plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
    id 'eclipse'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Minecraft 1.21.1 / NeoForge uses Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty('java.version')}, JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')}), Arch: ${System.getProperty('os.arch')}"

sourceSets.main.resources {
    srcDir 'src/generated/resources'

    // Avoid datagen cache duplication during processResources.
    exclude '**/.cache/**'
    exclude '**/.cache'
    exclude '**/*.bbmodel'
}

repositories {
    mavenCentral()

    maven {
        name = 'CurseMaven'
        url = 'https://cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }

    maven {
        name = 'GeckoLib'
        url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    }

    /*
     * Option A:
     * Use this if you publish ReinforcedBlackHoles to your local Maven repo:
     *
     * In ReinforcedBlackHoles:
     * ./gradlew publishToMavenLocal
     */
    mavenLocal()

    /*
     * Option B:
     * Use this if you copy ReinforcedBlackHoles jar into ./libs.
     */
    flatDir {
        dir 'libs'
    }

    /*
     * Option C:
     * Use this if your ReinforcedBlackHoles build.gradle publishes to a local folder repo.
     * Adjust the path if your folder is different.
     */
    maven {
        name = 'LocalReinforcedBlackHolesRepo'
        url = uri('../ReinforcedBlackHoles/repo')
    }
}

neoForge {
    version = project.neo_version

    parchment {
        minecraftVersion = project.parchment_minecraft_version
        mappingsVersion = project.parchment_mappings_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            gameDirectory = project.file('run-data')

            programArguments.addAll(
                    '--mod', project.mod_id,
                    '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
            )
        }

        configureEach {
            gameDirectory = project.file('run')

            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'forge.logging.console.level', 'debug'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Optional runtime-only mods should go here instead of runtimeOnly.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "curse.maven:geckolib-388172:7707149"
    implementation "curse.maven:create-328085:7963363"
    implementation "curse.maven:reinforced-black-holes-1367499:8194775"
    /*
     * If Maven local does not work, comment the line above and use one of these instead:
     *
     * implementation name: "rbh-${rbh_version}"
     *
     * or:
     *
     * implementation files("libs/rbh-${rbh_version}.jar")
     */

    /*
     * MixinExtras for NeoForge.
     * Use the NeoForge artifact, not mixinextras-forge.
     */
    compileOnly "io.github.llamalad7:mixinextras-common:${mixinextras_version}"
    annotationProcessor "io.github.llamalad7:mixinextras-common:${mixinextras_version}"

    implementation "io.github.llamalad7:mixinextras-neoforge:${mixinextras_version}"
    jarJar "io.github.llamalad7:mixinextras-neoforge:${mixinextras_version}"

    /*
     * Optional testing mods:
     *
     * localRuntime "curse.maven:jei-238222:<file_id>"
     * localRuntime "curse.maven:sodium-options-api-1103431:<file_id>"
     */
}

tasks.named('processResources', ProcessResources).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,

            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,

            rbh_version            : rbh_version
    ]

    inputs.properties replaceProperties

    filesMatching([
            'META-INF/neoforge.mods.toml',
            'pack.mcmeta'
    ]) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }

    repositories {
        maven {
            url = uri("file://${project.projectDir}/repo")
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}